# predictive-maintenance-with-time-series-in-python-using-pca-statistics-and-lstms

./: 10_Predictive-Maintenance-Time-Series.md  10_Predictive-Maintenance-Time-Series.py  2025-05-19 machine failure survival models.ipynb  README.md  config.yaml  generate_images.py  main.py  predictive_maintenance_RUL.ipynb  predictive_maintenance_RUL.py  predictive_maintenance_fixed.py  pyproject.toml  requirements.txt
_drafts/: predictive_maintenance_fixed.py
src/: core.py
survival/: __init__.py  __main__.py  cmapss.py  industrial.py
