[project]
name = "machine-failure-survival-models"
version = "0.1.0"
description = "CMAPSS and industrial survival / RUL modeling (converted from 2025-05-19 notebook)."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.1",
    "numpy>=1.26",
    "matplotlib>=3.8",
    "scikit-learn>=1.4",
    "statsmodels>=0.14",
    "lifelines>=0.30",
    "coral-pytorch>=1.4.0",
    "corn>=8",
    "fredapi>=0.5.2",
    "hmmlearn>=0.3.3",
    "lightgbm>=4.6.0",
    "mord>=0.7",
    "pandas-datareader>=0.10.0",
    "pycox>=0.3.0",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "shap>=0.49.1",
    "skorch>=1.4.0",
    "spacecutter>=0.2.1",
    "torch>=2.12.0",
    "torchtuples>=0.2.2",
    "pyyaml>=6.0.3",
    "pytest>=9.0.3",
]

[project.optional-dependencies]
deepsurv = [
    "torch>=2.1",
    "pycox>=0.2.3",
    "torchtuples>=0.2.0",
]

[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["survival"]
